fix z-index problem search and user dropdown

--- a/frontend/scss/globals/_header.scss
+++ b/frontend/scss/globals/_header.scss
@@ -100,6 +100,7 @@ $height__nav: 60px;
 
 .header__user {
   display: none;
+  z-index: $zindex__user;
 
   a {
     .icon {
